# text_editor

./: CMakeLists.txt  README.md  config.h.in  main.cpp  test.cpp
src/: CMakeLists.txt  FileClass.cpp  FileClass.h  FileFunctions.cpp  FileFunctions.h  FindAndReplaceDialog.cpp  FindAndReplaceDialog.h  MainWindow.cpp  MainWindow.h
